# feishu-ai-news-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
src/ai_news_bot/: __init__.py  config.py  feishu.py  main.py  markets.py  news.py  summarize.py
tools/: debug_fetch_counts.py  list_feishu_chats.py
